[#342] integrate uv-monorepo-dep-tool and added example